Changes I have made

--- a/scripts/sections/header.html
+++ b/scripts/sections/header.html
@@ -1,4 +1,4 @@
-<div id="mw_header"> 
-    <div id="mw_logo"></div>
+<header id="mw_header"> 
+    <a href="/" ><div id="mw_logo"></div></a>
     <div id="mw_search"></div> 
-</div>
+</header>
