--- a/scripts/sections/header.html
+++ b/scripts/sections/header.html
@@ -1,4 +1,9 @@
-<header id="mw_header"> 
+<header id="mw_header">
+<div id="mw_top"> 
     <a href="/" ><div id="mw_logo"></div></a>
-    <div id="mw_search"></div> 
+    </div>
+    <div id="mw_bottom">
+    <div class="mw_info" data-ur-tabs-component='content' data-ur-tab-id='info'>info stuff here</div>
+    <div class="mw_cart" data-ur-tabs-component='content' data-ur-tab-id='cart'>cart stuff here</div>
+    </div>
 </header>
