Changes I have made

--- a/scripts/sections/header.html
+++ b/scripts/sections/header.html
@@ -3,7 +3,11 @@
     <a href="/" ><div id="mw_logo"></div></a>
     </div>
     <div id="mw_bottom">
-    <div class="mw_info" data-ur-tabs-component='content' data-ur-tab-id='info'>info stuff here</div>
-    <div class="mw_cart" data-ur-tabs-component='content' data-ur-tab-id='cart'>cart stuff here</div>
+    <div id="mw_info" data-ur-tabs-component='content' data-ur-tab-id='info'>info stuff here
+    <span class="_info_tab"></span>
+    </div>
+    <div id="mw_cart" data-ur-tabs-component='content' data-ur-tab-id='cart'>cart stuff here
+    <span class="_cart_tab"></span>
+    </div>
     </div>
 </header>
