Changes I have made

--- a/scripts/sections/header.html
+++ b/scripts/sections/header.html
@@ -6,7 +6,8 @@
     <div id="mw_info" data-ur-tabs-component='content' data-ur-tab-id='info'>info stuff here
     <span class="_info_tab"></span>
     </div>
-    <div id="mw_cart" data-ur-tabs-component='content' data-ur-tab-id='cart'>cart stuff here
+    <div id="mw_cart" data-ur-tabs-component='content' data-ur-tab-id='cart'>cart stuff here and 
+    <a href="/cart/checkout">checkout</a>
     <span class="_cart_tab"></span>
     </div>
     </div>
