Changes I have made

--- a/scripts/sections/header.html
+++ b/scripts/sections/header.html
@@ -3,7 +3,10 @@
     <a href="/" ><div id="mw_logo"></div></a>
     </div>
     <div id="mw_bottom">
-    <div id="mw_info" data-ur-tabs-component='content' data-ur-tab-id='info'>info stuff here
+    <div id="mw_info" data-ur-tabs-component='content' data-ur-tab-id='info'>
+    <h2 class="_info_buttons">Subscribe</h2>
+    <h2 class="_info_buttons">My Account</h2>
+    <h2 class="_info_buttons">Check Out</h2>
     <span class="_info_tab"></span>
     </div>
     <div id="mw_cart" data-ur-tabs-component='content' data-ur-tab-id='cart'>cart stuff here and 
